fix stone logic

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2bc1fd" />
     <meta name="description" content="Buzz'n'Click ist ein Echtzeit-Multiplayer-Spiel, bei dem zu Quiz-Shows für deine Freunde erstellen kannst."/>
@@ -15,7 +16,7 @@
     <meta property="og:image" content="http://buzznclick.de/images/square-logo.png" />
     <link rel="canonical" href="http://buzznclick.de/" />
 
-    <title>Buzz'n'Click</title>
+    <title>Three Men's Morris</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
