metadata and fallback for share api

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#2bc1fd" />
-    <meta name="description" content="Buzz'n'Click ist ein Echtzeit-Multiplayer-Spiel, bei dem zu Quiz-Shows für deine Freunde erstellen kannst."/>
-    <meta name="keywords" content="Buzz'n'Click, BuzznClick, Quiz-Show, Multiplayer, Real-time game"/>
+    <meta name="theme-color" content="#314160" />
+    <meta name="description" content="Three Men's Morris is a real-time two-player online game. It is an abstract strategy game played on a three by three board that is similar to tic-tac-toe."/>
+    <meta name="keywords" content="Three Men's Morris, online game, multiplayer game, real-time online game, two-player game, tic-tac-toe"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="og:title" content="Buzz'n'Click" />
+    <meta property="og:title" content="Three Men's Morris" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://buzznclick.de/" />
-    <meta property="og:image" content="http://buzznclick.de/images/square-logo.png" />
-    <link rel="canonical" href="http://buzznclick.de/" />
+    <meta property="og:url" content="https://www.three-mens-morris-com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/morris.png" />
+    <link rel="canonical" href="https://www.three-mens-morris-com/" />
 
     <title>Three Men's Morris</title>
   </head>
