some stylings and first refactorings

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="Three Men's Morris" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.three-mens-morris-com/" />
+    <meta property="og:url" content="https://www.three-mens-morris.com/" />
     <meta property="og:image" content="%PUBLIC_URL%/images/morris.png" />
-    <link rel="canonical" href="https://www.three-mens-morris-com/" />
+    <link rel="canonical" href="https://www.three-mens-morris.com/" />
 
     <title>Three Men's Morris</title>
   </head>
