google site verification

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://www.three-mens-morris.com/" />
     <meta property="og:image" content="%PUBLIC_URL%/images/morris.png" />
     <link rel="canonical" href="https://www.three-mens-morris.com/" />
+    <meta name="google-site-verification" content="YEL8NC5cLw7ceNqeqCw3Fd5tji9SZUUhVRvolLDyJdI" />
 
     <title>Three Men's Morris</title>
   </head>
