--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#314160" />
-    <meta name="description" content="Three Men's Morris is a real-time two-player online game. It is an abstract strategy game played on a three by three board that is similar to tic-tac-toe."/>
+    <meta name="description" content="Play Three Men's Morris online against friends or the computer. Three Men's Morris is a real-time two-player online game. It is an abstract strategy game played on a three by three board that is similar to tic-tac-toe."/>
     <meta name="keywords" content="Three Men's Morris, online game, multiplayer game, real-time online game, two-player game, tic-tac-toe"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -17,7 +17,7 @@
     <link rel="canonical" href="https://www.three-mens-morris.com/" />
     <meta name="google-site-verification" content="YEL8NC5cLw7ceNqeqCw3Fd5tji9SZUUhVRvolLDyJdI" />
 
-    <title>Three Men's Morris</title>
+    <title>Three Men's Morris online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
